<resources>
    <string name="app_name">BonAppEtit</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome">Welcome to Bon-app-etit!</string>
    <string name="food_map">Food Map</string>
    <string name="recipe_log">Recipe Log</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="messages_header">messages_header</string>
    <string name="signature_title">signature_title</string>
    <string name="reply_title">reply_title</string>
    <string name="sync_header">sync_header</string>
    <string name="sync_title">sync_title</string>
    <string name="attachment_summary_off">attachment_summary_off</string>
    <string name="attachment_summary_on">attachment_summary_on</string>
    <string name="attachment_title">attachment_title</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="profile_btn_info">profile_btn_info</string>
    <string name="profile_name">Your Name</string>
    <string name="profile_email">Your Email</string>
    <string name="profile_number">Your Mobile Number</string>
    <string name="profile_privacy">Privacy Policy</string>
    <string name="breakfast_recipes">Breakfast Recipes</string>
    <string name="lunch_recipes">Lunch Recipes</string>
    <string name="search">Search</string>
    <string name="title_activity_view_image">activity_view_image</string>
    <!-- Strings used for fragments for navigation -->


    <string name="title_activity_create_breakfast_recipe">activity_create_breakfastRecipe</string>
    <string name="lbl_createBreakfast">Create Breakfast</string>
    <string name="lbl_notes">Create Notes</string>
    <string name="lbl_date">Recipe Date</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Sattelite</string>
    <string name="terrain_map">Terrain</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="filter">filter</string>
    <string name="BonAppEtit">BonAppEtit</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="your_recipes">Your Recipes</string>
    <string name="title_search_recipes">Search For Recipes</string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>


</resources>