<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tomcrawfordapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tomcrawfordapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tomcrawfordapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_foodMap"
        android:name="com.example.tomcrawfordapp.FoodMapFragment"
        android:label="Food Map"
        tools:layout="@layout/fragment_food_map" />
    <fragment
        android:id="@+id/nav_recipeLog"
        android:name="com.example.tomcrawfordapp.RecipeLog"
        android:label="Recipe Log"
        tools:layout="@layout/fragment_recipe_log" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.tomcrawfordapp.SettingsFragment"
        android:label="Profile" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.tomcrawfordapp.SettingsFragment"
        android:label="Settings"
        tools:layout="layout/fragment_settings"/>

</navigation>