<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Food-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLay_Food"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/breakfast_recipes"
            android:theme="@style/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_food"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintBottom_toBottomOf="@+id/create_food_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/create_food_btn"
            app:menu="@menu/menu_food">

        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/create_food_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:text="@string/create_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_food" />

        <TextView
            android:id="@+id/food_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/your_recipes"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:theme="@style/label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_food_btn" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_label">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:theme="@style/recycler_view"
                tools:listitem="@layout/recyclerview_item" />
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--VPlaces-->


</androidx.constraintlayout.widget.ConstraintLayout>