<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_title"
            android:text="Profile"
            android:textColor="@color/design_default_color_primary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textSize="25dp"
            android:textStyle="bold"
            android:padding="15dp"/>

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher_round"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Person Name"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/user_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Active Since 2018 "
            android:textSize="12dp"/>

        <View
            android:layout_height="1.5dp"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:background="#A9A9A9" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:background="@android:color/background_light"
                    android:drawableLeft="@drawable/ic_profile1"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/cardview_dark_background"
                    android:paddingLeft="10dp"
                    android:text="@string/profile_name"
                    android:textSize="30dp"
                    android:textAllCaps="false"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
                <View
                    android:layout_height="1.5dp"
                    android:layout_width="match_parent"
                    android:background="#A9A9A9" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:background="@android:color/background_light"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/cardview_dark_background"
                    android:paddingLeft="10dp"
                    android:textSize="30dp"
                    android:text="@string/profile_email"
                    android:textAllCaps="false"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <View
                    android:layout_height="1.5dp"
                    android:layout_width="match_parent"
                    android:background="#A9A9A9" />

                <View
                    android:layout_height="1.5dp"
                    android:layout_width="match_parent"
                    android:background="#A9A9A9" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profile_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/background_light"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/cardview_dark_background"
                        android:paddingLeft="10dp"
                        android:textSize="30dp"
                        android:text="@string/profile_number"
                        android:textAllCaps="false"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


                </LinearLayout>
                <View
                    android:layout_height="1.5dp"
                    android:layout_width="match_parent"
                    android:background="#A9A9A9" />

                <View
                    android:layout_height="1.5dp"
                    android:layout_width="match_parent"
                    android:background="#A9A9A9" />

                <View
                    android:layout_height="1.5dp"
                    android:layout_width="match_parent"
                    android:background="#A9A9A9" />

                    />
                <View
                    android:layout_height="1.5dp"
                    android:layout_width="match_parent"
                    android:background="#A9A9A9" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>